[project]
name = "pyinfra-dots"
version = "0.1.0"
description = "Pyinfra-based dotfiles deployment for macOS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyinfra>=3.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "ty>=0.0.1a1",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["roles", "facts"]
